unit-03/virtual-service-cors.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - exact: /all-pets
      options:
        prefixRewrite: /api/pets
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
    options:
      cors:
        maxAge: "3600"
        allowCredentials: true
        allowOrigin:
          - "*"
        allowMethods:
          - "GET"
          - "POST"
          - "OPTIONS"
        allowHeaders:
          - "Content-Type"
          - "X-Custom-Header"
        exposeHeaders:
          - "Access-Control-Allow-Credentials"
          - "X-Envoy-Upstream-Service-Time"
          - "Access-Control-Allow-Origin"
          - "Content-Length"
          - "Content-Type"
          - "Server"
          - "Date"
